warehouse_deployment/warehouse-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service-service
spec:
  selector:
    app: warehouse-service-pod
  ports:
    - port: 8080
      targetPort: 80
  type: ClusterIP
