warehouse_deployment/warehouse-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warehouse-ingress
spec:
  rules:
    - host: warehouse
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warehouse-service-service
                port:
                  number: 8080
